# imx6qdl-pinmux-helper

./: LICENSE  README.md  pinmux_helper_imx6.py  pyproject.toml
.github/workflows/: cibuildwheel.yml  python-qa.yml
src/pinmux_helper_imx6/: pinmux_helper_imx6.py
tests/: test_generate.py  test_parse_pinmux.py
